--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-rami",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "An opinionated ESLint configuration that extends AirBnB's ESLint configuration.",
   "main": "index.js",
   "scripts": {
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/ramiAbdou/eslint-config-rami#readme",
   "peerDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.24.0",
+    "@typescript-eslint/parser": "^4.24.0",
     "eslint": "^7.27.0",
     "eslint-config-airbnb": "^18.2.1",
     "eslint-config-prettier": "^8.3.0",
