--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "eslint-config-rami",
-  "version": "1.0.6",
+  "version": "1.0.7",
   "description": "An opinionated ESLint configuration that extends AirBnB's ESLint configuration.",
   "main": "index.js",
   "scripts": {
@@ -30,7 +30,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-sort-keys-fix": "^1.1.1",
-    "prettier": "^2.3.0"
+    "prettier": "^2.3.0",
+    "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.24.0",
